slight css tweak to footer to fix alignment of address, etc. at bottom

--- a/themes/nudev/src/__PRECOMP/sass/partials/footer.scss
+++ b/themes/nudev/src/__PRECOMP/sass/partials/footer.scss
@@ -837,15 +837,15 @@ footer{
               }
            }
 
-         // & > p{
-         //   text-align: center;
-         //   & > a{
-         //
-         //     &:hover{
-         //
-         //     }
-         //   }
-         // }
+         & > p{
+           text-align: center;
+           // & > a{
+           //
+           //   &:hover{
+           //
+           //   }
+           // }
+         }
       }
      }
 
